<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <com.jess.ui.TwoWayGridView
        android:id="@+id/choose_sticker_horizontal_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/controller_min_height"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="@color/trans_75_black"
        android:scrollbars="none"
        app:listSelector="@android:color/transparent"
        app:cacheColorHint="@android:color/transparent"
        app:numColumns="auto_fit"
        app:numRows="2"
        app:twoway_verticalSpacing="2dp"
        app:twoway_horizontalSpacing="0dp"
        app:scrollDirectionPortrait="horizontal"
        app:scrollDirectionLandscape="horizontal"
        app:gravity="center"/>

    <LinearLayout
        android:id="@+id/sticker_tab_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/trans_90_black"
        android:gravity="center"
        android:minHeight="@dimen/tab_min_height"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/sticker_group_1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tab_min_height"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sticker_group_textview_1"
                style="@style/sticker_resource_tab_style"
                android:text="@string/sticker_hot"/>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="10dip"
            android:layout_gravity="center_vertical"
            android:background="@color/trans_white" />

        <LinearLayout
            android:id="@+id/sticker_group_2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tab_min_height"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sticker_group_textview_2"
                style="@style/sticker_resource_tab_style"
                android:text="@string/sticker_emotion"/>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="10dip"
            android:layout_gravity="center_vertical"
            android:background="@color/trans_white" />

        <LinearLayout
            android:id="@+id/sticker_group_3"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tab_min_height"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sticker_group_textview_3"
                style="@style/sticker_resource_tab_style"
                android:text="@string/sticker_cartoon"/>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="10dip"
            android:layout_gravity="center_vertical"
            android:background="@color/trans_white" />

        <LinearLayout
            android:id="@+id/sticker_group_4"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tab_min_height"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sticker_group_textview_4"
                style="@style/sticker_resource_tab_style"
                android:text="@string/sticker_star"/>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="10dip"
            android:layout_gravity="center_vertical"
            android:background="@color/trans_white" />

        <LinearLayout
            android:id="@+id/sticker_group_5"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tab_min_height"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sticker_group_textview_5"
                style="@style/sticker_resource_tab_style"
                android:text="@string/sticker_character"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>