<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_title_bar_color"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/main_title_bar_min_height" >

        <TextView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/icon_edit_banner_back"
            android:drawableStart="@drawable/icon_edit_banner_back"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:contentDescription="@string/about"
            android:src="@drawable/title_thanks" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="@color/main_title_bar_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/about_logo_size"
                    android:layout_height="@dimen/about_logo_size"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/thank_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_info"
                    android:textColor="#3a3838"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_thankyou"
                    android:textColor="#423e3e"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/thanks_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1px"
                            android:layout_weight="1"
                            android:background="#d9d9d9" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="联系我们"
                            android:textColor="#919191"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1px"
                            android:layout_weight="1"
                            android:background="#d9d9d9" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingTop="10dp" >

                        <Button
                            android:id="@+id/button_home"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="4dp"
                            android:drawableTop="@drawable/button_about_home_selector"
                            android:gravity="center"
                            android:text="@string/home"
                            android:textColor="@color/about_button_text_color"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button_qq"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="4dp"
                            android:drawableTop="@drawable/button_about_qq_selector"
                            android:gravity="center"
                            android:text="@string/qq_group"
                            android:textColor="@color/about_button_text_color"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button_wechat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="4dp"
                            android:drawableTop="@drawable/button_about_wechat_selector"
                            android:gravity="center"
                            android:text="@string/wechat"
                            android:textColor="@color/about_button_text_color"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button_weibo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="4dp"
                            android:drawableTop="@drawable/button_about_weibo_selector"
                            android:gravity="center"
                            android:text="@string/weibo"
                            android:textColor="@color/about_button_text_color"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button_tieba"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawablePadding="4dp"
                            android:drawableTop="@drawable/button_about_tieba_selector"
                            android:gravity="center"
                            android:text="@string/tieba"
                            android:textColor="@color/about_button_text_color"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:text="@string/copyright_message"
                        android:textColor="#c9c9c9"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>